# ROS2-VisionNode

./: .gitignore  README-EN.md  README.md  README_FULL.md  TESTING.md  requirements.txt
JupyterNoteBooks/: DataPreperaion.ipynb  TrainYolo.ipynb
JupyterNoteBooks/runs/detect/sanity_check/: args.yaml  results.csv
JupyterNoteBooks/runs/segment/sanity_check/: args.yaml
JupyterNoteBooks/yolo-dataset/: data.yaml
JupyterNoteBooks/yolo-dataset/test/labels/: G0029952_JPG.rf.4dcef6b730e843b77b40d547fd226f12.txt  G0029972_JPG.rf.a13e9edcceb264730c9286cf45acdd18.txt  G0030014_JPG.rf.d82242ce60f359aee8162cb3e552a0ac.txt  G0030019_JPG.rf.bbb340578d570c2b3558feb61e97e18f.txt  G0030187_JPG.rf.e3d8f8811961addcaa2446c6742f771b.txt  G0030218_JPG.rf.455527387c13541902ea0e239d8d645a.txt  G0030229_JPG.rf.1afafc01e98496df5dcee2b3be1f527c.txt  G0040507_JPG.rf.68342ca2740c778c25f3c6a624aa69fa.txt  G0040548_JPG.rf.72853bbd47d8de8fcd8e32b6455f9a31.txt  G0040553_JPG.rf.d111a378fefbd4da3643e363293b7d2b.txt  G0040581_JPG.rf.2160a76cff687ee11dbcca77edcc00ac.txt  G0040641_JPG.rf.1e0c56fe1ac8fb23dcd6f31845c72328.txt  G0040646_JPG.rf.71181d417dfeaf5485d9757dbd1c4d5f.txt
JupyterNoteBooks/yolo-dataset/train/: labels.cache
JupyterNoteBooks/yolo-dataset/train/labels/: G0029596_JPG.rf.d87d674c333c08906075c9b5e8a93596.txt  G0029597_JPG.rf.211772615fd4066f831e86d7cd471269.txt  G0029599_JPG.rf.5346366a337ccce55f1c9018bc50d403.txt  G0029600_JPG.rf.e92859e7a036c5287f789f7f0e76b617.txt  G0029602_JPG.rf.52094b212b456a304b7022903b63b994.txt  G0029605_JPG.rf.9cfd3de23e469cf925885c2e3f156824.txt  G0029674_JPG.rf.6aeb4d44d3c5b9b72de41e5ae7407f2e.txt  G0029676_JPG.rf.7c463261b9b8fdb317fb9371e9680fc2.txt  G0029679_JPG.rf.1e421d0d8f048a2d6b2566909d388fb5.txt  G0029680_JPG.rf.6bc551a2ad610ab2b4c1824d7cd8ac86.txt  G0029681_JPG.rf.af2920b53a4e2b9f98dce55fbabd11b5.txt  G0029683_JPG.rf.45fbcc46e33af672e412d194f8126088.txt  G0029684_JPG.rf.0d2828a918f7a1e16ea80cff315889c6.txt  G0029685_JPG.rf.eb7982cc50c88077d5985ef7a0c9ab47.txt  G0029725_JPG.rf.32db976584b5ff47b26cc0a75bf5a4f1.txt  G0029728_JPG.rf.4196483897afd03fd9fb3423664ebe89.txt  G0029735_JPG.rf.195148857b564086ff2271622a047b50.txt  G0029740_JPG.rf.c3e812a7b51bb0a2aa9072c88e9e3ae5.txt  G0029749_JPG.rf.ef5ed698bc2b3595c1360bba3ee8d677.txt  G0029752_JPG.rf.fa34dd81109d0501ab289c1c69ab0ff8.txt  G0029753_JPG.rf.e7648297b2fd7150cb487f0c3a59612f.txt  G0029754_JPG.rf.0c948472b59f5c73903be6dcf8f3c69f.txt  G0029755_JPG.rf.ae33ab111a2888fef2202076248053a9.txt  G0029756_JPG.rf.e467f2def17cdeb10ccb3159231fd0b8.txt  G0029759_JPG.rf.38370475e0caeffe9df367934fd0bc11.txt  G0029760_JPG.rf.d1086336bed8f8f0b12d9456255dce0d.txt  G0029761_JPG.rf.9825d0f083283ca71afe64fbcd41dcbd.txt  G0029762_JPG.rf.bccede3427fb1400fbb1e7c6ec375424.txt  G0029763_JPG.rf.fe7e3deb2c02ab05ad633ce5d9386868.txt  G0029765_JPG.rf.383aaa2adfdc862028094f2bb4265df3.txt  G0029766_JPG.rf.cbd2420cabee52d5584f8122da8a2424.txt  G0029769_JPG.rf.f4684d34a7acb10be7316459ad6728bc.txt  G0029770_JPG.rf.a8feafd4374236a1b3ec836cdd451c10.txt  G0029771_JPG.rf.fc5eaac11f362287848a0bd8baca8d41.txt  G0029772_JPG.rf.62fe7516552161c454f8cb82eaf80c6e.txt  G0029775_JPG.rf.e29c22edac48197023f606381a00ba4e.txt  G0029776_JPG.rf.d8d3bdd0924d2d49f0ede183d4cacb32.txt  G0029777_JPG.rf.6fdcb5901b882b69657132a6f20fcc9b.txt  G0029778_JPG.rf.ca6980fbbd54a495de98160dcdafcd53.txt  G0029779_JPG.rf.acffe6d4ffcd6e2f552c8de9c0546c8d.txt  (+224 more)
JupyterNoteBooks/yolo-dataset/valid/: labels.cache
JupyterNoteBooks/yolo-dataset/valid/labels/: G0029598_JPG.rf.b722fc09b223582ca9de3c3539608c7c.txt  G0029672_JPG.rf.47907708e61bf9c00952c99d601e8110.txt  G0029677_JPG.rf.8ad73dc98e405a12b8c157050bbb84f1.txt  G0029678_JPG.rf.1269aef7c5be63ff7b174dcd78295fa4.txt  G0029682_JPG.rf.866c66dc69effb8c5183310640b71615.txt  G0029731_JPG.rf.10ac408e0f00350d253232961046c9b0.txt  (+89 more)
Vision-Ros2Node/: pytest.ini  requirements.txt
Vision-Ros2Node/src/vision/: package.xml  setup.py
Vision-Ros2Node/src/vision_msgs/: CMakeLists.txt
src/vision/: package.xml  setup.py
src/vision/test/: test_inference_model.py  test_inference_utils.py  test_postprocessor.py  test_realsense_camera.py
src/vision/vision/: config.py  inference.py  postprocessor.py  publisher.py  realsense_camera.py  vision_node.py  watchdog.py
src/vision_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vision_msgs/msg/: SegmentationOutput.msg  VisionStatus.msg
src/vision_msgs_py/: package.xml  setup.py
src/vision_msgs_py/vision_msgs_py/msg/: SementationOutput.msg  VisionStatus.msg
yolo-segmentation-project/: README.md
yolo-segmentation-project/config/: train.yaml
yolo-segmentation-project/scripts/: check_env.py  evaluation.py  train.py
(+4 files in other folders)
