cmake_minimum_required(VERSION 3.8)
project(vision_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)

# Generate ROS2 messages
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/SegmentationOutput.msg"
  "msg/VisionStatus.msg"
  DEPENDENCIES builtin_interfaces sensor_msgs std_msgs
)

ament_python_install_package(vision_msgs)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
